<?xml version="1.0"?>
<package format="2">
  <name>data_exportor</name>
  <version>0.0.0</version>
  <description>The data_exportor package</description>

  <maintainer email="kuwano.tomohiro455@mail.kyutech.jp">calm0815</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosbag</depend>

  <test_depend>roslaunch</test_depend>

</package>
