<?xml version="1.0"?>
<package format="2">
  <name>usb_device_checker</name>
  <version>0.0.0</version>
  <description>The usb_device_checker package</description>
  
  <maintainer email="kuwano.tomohiro455@mail.kyutech.jp">calm0815</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
