<?xml version="1.0"?>
<package format="2">
  <name>user_interface</name>
  <version>0.0.0</version>
  <description>The user_interface package</description>

  <maintainer email="kuwano.tomohiro455@mail.kyutech.jp">calm0815</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <test_depend>roslaunch</test_depend>
  
</package>